# competitive-programming-library

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
tests/algorithm/math/: test_is_prime.py
tests/algorithm/other/: test_is_palindrome.py
tests/math/: test_is_prime.py
tests/others/: test_is_palindrome.py
