[tool.poetry]
name = "competitive-programming-library"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
ipython = "^7.30.1"
mypy = "^0.910"
pytest-flake8 = "^1.0.7"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# See https://github.com/psf/black/blob/main/pyproject.toml
[tool.black]
line-length = 120
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | .mypy_cache
  | .pytest_cache
  | .venv
)/
'''
